CSS: Prevent tooltip from wrapping (Always)

--- a/resources/assets/sass/components/Btn.css
+++ b/resources/assets/sass/components/Btn.css
@@ -20,8 +20,8 @@ td div.btn-group .btn {
   float: none;
   display: inline-block;
 }
-/* Prevent Tooltip from wrapping (in tables) */
-td div.btn-group .tooltip-inner {
+/* Prevent Tooltip from wrapping */
+.tooltip-inner {
 	white-space: nowrap;
 }
 
